# c_rust_practice

./: Cargo.toml  README.md
crates/library_crate/: Cargo.toml
crates/library_crate/src/: lib.rs
crates/output_crate/: Cargo.toml  build.rs
crates/output_crate/src/: lib.rs
