[package]
name = "output_crate"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "example"
crate-type = ["cdylib"]

[dependencies]
library_crate = { path = "../library_crate" }

[build-dependencies]
cbindgen = "0.24.3"
